--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="google-site-verification" content="rEZLco3mQiuBdk_GBkD3LcnAMhsyGYqLM6n1t9GZXJw" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>What Makes Snorkeling Between Two Continents So Special</title>
@@ -207,3 +208,4 @@
 
 </body>
 </html>
+
